# rebarguard

./: .gitattributes  .gitignore  AUDIT-FINAL.md  AUDIT-V2.md  AUDIT-V3.md  AUDIT.md  CLAUDE.md  DEPLOY.md  LICENSE  README.md  SUBMISSION.md  plan.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/hermes-config/: cli-config.yaml  install-cron.sh  install-plugins.sh
backend/hermes-config/agent-hooks/: audit-trail.sh  log-session-start.sh  log-verdict.sh
backend/scripts/: build_sample_structural_pdf.py  fly_quick_probe.py
backend/skills/rebarguard/citizen-chat/: SKILL.md
backend/skills/rebarguard/parse-structural-plan/: SKILL.md
backend/src/rebarguard/: __init__.py  config.py  main.py
backend/src/rebarguard/agents/: __init__.py  _element_utils.py  base.py  code_compliance.py  cover.py  fraud.py  geometry.py  material.py  moderator.py  municipality.py  plan_parser.py  risk.py
backend/src/rebarguard/data/: __init__.py
backend/src/rebarguard/data/demo_replay/: __init__.py  fistik_reject.json  video_fistik.json
backend/src/rebarguard/hermes/: __init__.py  client.py
backend/src/rebarguard/hermes_runtime/: __init__.py  bridge.py  memory.py
backend/src/rebarguard/hermes_runtime/scripts/: hermes_oneshot.py
backend/src/rebarguard/mcp/: __init__.py  __main__.py  server.py
backend/src/rebarguard/rag/: __init__.py  regulations.py
backend/src/rebarguard/routers/: audit.py  chat.py  complaints.py  demo.py  inspections.py  projects.py  quick.py  regulations.py  video.py
backend/src/rebarguard/schemas/: __init__.py  models.py
backend/src/rebarguard/services/: __init__.py  complaint_pdf.py  inspection.py
backend/src/rebarguard/vision/: __init__.py  kimi_client.py  prompts.py
backend/tests/: e2e_hermes_bridge.py  test_geometry_agent.py  test_rag_whitelist.py  test_routes_smoke.py  test_schemas.py
data/: DEMO.md  README.md
docs/: ARCHITECTURE.md
docs/design/: RebarGuard Preview.html  shared.jsx  tokens.css
docs/design/scraps/: sketch-2026-04-19T17-54-31-tk7uze.napkin  sketch-2026-04-19T17-54-34-4p6q9s.napkin
docs/design/slides/: 02-quick.jsx  04-designsystem.jsx  05-bubble.jsx
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/audit/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/demo/: page.tsx
frontend/components/: AgentDebateFeed.tsx  AgentRing.tsx  ArticleModal.tsx  Bubble.tsx  BuildingPane.tsx  ClaudeBuildingViewer.tsx  DebateStream.tsx  FullBuildingViewer.tsx  Logo.tsx  ModelBadge.tsx  ReplayDemoButton.tsx  SamplePicker.tsx  ScorePanel.tsx  SeedFistikButton.tsx  ThreeOverlay.tsx  TopNav.tsx  VerdictCinema.tsx
frontend/lib/: agents.ts  api.ts  sample-media.ts
frontend/public/: slides.html
scripts/: README.md  run-mcp.sh  setup-hermes.cmd  setup-hermes.sh  start-cron-gateway.sh  test-hermes-text.sh  test-hermes-vision.sh  test-plan-parser.sh
skills/: README.md
(+11 files in other folders)
