[project]
name = "rebarguard"
version = "0.1.0"
description = "Multi-agent AI inspector for reinforced-concrete construction (Hermes + Kimi-VL)"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "openai>=1.54.0",
    "pypdf>=5.1.0",
    "pillow>=11.0.0",
    "piexif>=1.1.3",
    "numpy>=2.1.0",
    "sse-starlette>=2.1.3",
    "tenacity>=9.0.0",
    "supabase>=2.10.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rebarguard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
